# financas-api

./: .copilot-instructions.md  .env.example  .gitignore  EDGE_CASES_FIXED.md  IMPLEMENTATION_GAPS.md  README.md  TESTING_SUMMARY.md  alembic.ini  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
.github/prompts/: plan-sistemaRegrasAutomaticas.prompt.md
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 20251227_1052-cf2c36ca1c82_migração_inicial.py  20251227_1120-448cceacb835_adiciona_campo_data_fatura_em_transacao.py  20251227_1828-d70d5519cb9f_adiciona_campo_valor_original_em_.py  20251227_1905-ad252fbd3b6e_adiciona_sistema_de_tags_para_transacoes.py  20251228_1248-70528d8e9c5f_adiciona_sistema_de_regras_automaticas.py  20251228_1518-89605a63827e_adiciona_cascade_delete_em_regratag.py  20260104_1238-60991599f87f_adiciona_validacoes_edge_cases.py  20260104_1540-3f28e19cbaf8_adiciona_unique_constraint_case_.py  20260105_2231-856715defdd8_adiciona_tabela_configuracao.py
app/: config.py  database.py  main.py  models.py  models_config.py  models_regra.py  models_tags.py  schemas.py
app/application/dto/: configuracao_dto.py  importacao_dto.py  regra_dto.py  tag_dto.py  transacao_dto.py
app/application/exceptions/: __init__.py  application_exceptions.py
app/application/use_cases/: adicionar_tag_transacao.py  aplicar_regra_em_transacao.py  aplicar_regras.py  aplicar_todas_regras.py  (+22 more)
app/infrastructure/: config.py
app/routers/: configuracoes.py  importacao.py  regras.py  tags.py  transacoes.py
app/services/: regras.py
tests/: README.md  RESUMO_FASE_IMPORTACAO.md  __init__.py  conftest.py
tests/factories/: __init__.py
tests/integration/: test_configuracoes_endpoints.py  test_importacao_endpoints.py  test_regras_endpoints.py  test_tags_endpoints.py  test_transacoes_endpoints.py
tests/performance/: test_edge_cases_criticos.py
tests/regression/: test_regressao.py
tests/unit/: test_models.py  test_services_regras.py
(+45 files in other folders)
