[project]
name = "financas-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.109.0",
    "openpyxl>=3.1.2",
    "pandas>=2.1.4",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "sqlmodel>=0.0.14",
    "uvicorn>=0.27.0",
]
